Adding calcs process to integrate with db and rules

--- a/covid-rules.ipynb
+++ b/covid-rules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,13 +41,14 @@
     "import numpy as np\n",
     "\n",
     "# Si fatality rate sube, se esta subtesteando, hay mas casos de lo que se cree.\n",
+    "# jump days cada cuantos dias sacas una foto (mirando pa atras)\n",
     "\n",
-    "def process_means(number_days_window, jump_days, total_lapse_day):\n",
+    "def process_means(number_days_window, jump_days, total_jumps):\n",
     "    my_populated_list = populate_list(number_days_window)\n",
     "    means_list = []\n",
     "    fatality_rate = []\n",
     "    active_cases = []\n",
-    "\n",
+    "    total_lapse_day = jump_days * total_jumps\n",
     "    df = pd.DataFrame (my_populated_list,columns=['day-number', 'active', 'cases-count','delta', 'fatality_rate','date'])\n",
     "    \n",
     "    for n in range(total_lapse_day,0,-jump_days):\n",
@@ -66,59 +67,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1065444, 1176682, 1284054, 1375623, 1479228]\n",
-      "LinregressResult(slope=102650.90000000001, intercept=1070904.4, rvalue=0.9994460538180151, pvalue=1.5649451764737468e-05, stderr=1973.4739986463608)\n",
-      "[0.026614792795943348, 0.027077840031949702, 0.02711173326873565, 0.027277400864651306, 0.0270573227228693]\n",
-      "LinregressResult(slope=0.000108462068655351, intercept=0.026810893799519155, rvalue=0.6953612113665375, pvalue=0.19235170831815573, stderr=6.471880891532188e-05)\n",
-      "[154612, 143024, 130242, 128312, 143853]\n",
-      "LinregressResult(slope=-3623.0, intercept=147254.6, rvalue=-0.5288469182843798, pvalue=0.3595077561200439, stderr=3356.9181163680473)\n",
+      "[1298079, 1389986, 1498215]\n",
+      "LinregressResult(slope=100068.0, intercept=1295358.6666666667, rvalue=0.998893315927466, pvalue=0.029953461026538918, stderr=4711.755546856499)\n",
+      "[0.027113823295303794, 0.027209919430055626, 0.026928903664589072]\n",
+      "LinregressResult(slope=-9.245981535736107e-05, intercept=0.027176675278673523, rvalue=-0.6473492547820558, pvalue=0.5517550677621113, stderr=0.00010886282855284805)\n",
+      "[128735, 130997, 146477]\n",
+      "LinregressResult(slope=8871.0, intercept=126532.0, rvalue=0.9186249156838107, pvalue=0.2586013919587784, stderr=3815.707929074236)\n",
       "...----...\n",
-      "[1043357, 1186444, 1297894, 1390848, 1483833]\n",
-      "LinregressResult(slope=108535.6, intercept=1063404.0, rvalue=0.9953337595066747, pvalue=0.0003823669289569103, stderr=6074.830766367023)\n",
-      "[0.026614792795943348, 0.027077840031949702, 0.02711173326873565, 0.027277400864651306, 0.0270573227228693]\n",
-      "LinregressResult(slope=0.000108462068655351, intercept=0.026810893799519155, rvalue=0.6953612113665375, pvalue=0.19235170831815573, stderr=6.471880891532188e-05)\n",
-      "[154612, 143024, 130242, 128312, 143853]\n",
-      "LinregressResult(slope=-3623.0, intercept=147254.6, rvalue=-0.5288469182843798, pvalue=0.3595077561200439, stderr=3356.9181163680473)\n",
+      "[1311938, 1404275, 1499274]\n",
+      "LinregressResult(slope=93668.0, intercept=1311494.3333333333, rvalue=0.9999663488086744, pvalue=0.005222717805116478, stderr=768.4532082889356)\n",
+      "[0.027113823295303794, 0.027209919430055626, 0.026928903664589072]\n",
+      "LinregressResult(slope=-9.245981535736107e-05, intercept=0.027176675278673523, rvalue=-0.6473492547820558, pvalue=0.5517550677621113, stderr=0.00010886282855284805)\n",
+      "[128735, 130997, 146477]\n",
+      "LinregressResult(slope=8871.0, intercept=126532.0, rvalue=0.9186249156838107, pvalue=0.2586013919587784, stderr=3815.707929074236)\n",
       "...----...\n",
-      "[1042640, 1190375, 1302554, 1393556, 1479020]\n",
-      "LinregressResult(slope=107594.1, intercept=1066440.8, rvalue=0.9931312925988433, pvalue=0.0006826505114254079, stderr=7318.576646452502)\n",
-      "[0.026614792795943348, 0.027077840031949702, 0.02711173326873565, 0.027277400864651306, 0.0270573227228693]\n",
-      "LinregressResult(slope=0.000108462068655351, intercept=0.026810893799519155, rvalue=0.6953612113665375, pvalue=0.19235170831815573, stderr=6.471880891532188e-05)\n",
-      "[154612, 143024, 130242, 128312, 143853]\n",
-      "LinregressResult(slope=-3623.0, intercept=147254.6, rvalue=-0.5288469182843798, pvalue=0.3595077561200439, stderr=3356.9181163680473)\n",
+      "[1316297, 1406348, 1495084]\n",
+      "LinregressResult(slope=89393.5, intercept=1316516.1666666667, rvalue=0.999990983821368, pvalue=0.002703377537361862, stderr=379.60780198913636)\n",
+      "[0.027113823295303794, 0.027209919430055626, 0.026928903664589072]\n",
+      "LinregressResult(slope=-9.245981535736107e-05, intercept=0.027176675278673523, rvalue=-0.6473492547820558, pvalue=0.5517550677621113, stderr=0.00010886282855284805)\n",
+      "[128735, 130997, 146477]\n",
+      "LinregressResult(slope=8871.0, intercept=126532.0, rvalue=0.9186249156838107, pvalue=0.2586013919587784, stderr=3815.707929074236)\n",
       "...----...\n",
-      "[1045520, 1192529, 1305518, 1394772, 1476757]\n",
-      "LinregressResult(slope=106471.70000000001, intercept=1070075.7999999998, rvalue=0.9923207482523517, pvalue=0.0008068844101029332, stderr=7662.325029867403)\n",
-      "[0.026614792795943348, 0.027077840031949702, 0.02711173326873565, 0.027277400864651306, 0.0270573227228693]\n",
-      "LinregressResult(slope=0.000108462068655351, intercept=0.026810893799519155, rvalue=0.6953612113665375, pvalue=0.19235170831815573, stderr=6.471880891532188e-05)\n",
-      "[154612, 143024, 130242, 128312, 143853]\n",
-      "LinregressResult(slope=-3623.0, intercept=147254.6, rvalue=-0.5288469182843798, pvalue=0.3595077561200439, stderr=3356.9181163680473)\n",
+      "[1318928, 1406955, 1491473]\n",
+      "LinregressResult(slope=86272.5, intercept=1319512.8333333333, rvalue=0.9999310767374432, pvalue=0.007474472162689514, stderr=1012.9610472933987)\n",
+      "[0.027113823295303794, 0.027209919430055626, 0.026928903664589072]\n",
+      "LinregressResult(slope=-9.245981535736107e-05, intercept=0.027176675278673523, rvalue=-0.6473492547820558, pvalue=0.5517550677621113, stderr=0.00010886282855284805)\n",
+      "[128735, 130997, 146477]\n",
+      "LinregressResult(slope=8871.0, intercept=126532.0, rvalue=0.9186249156838107, pvalue=0.2586013919587784, stderr=3815.707929074236)\n",
       "...----...\n",
-      "[1048421, 1193797, 1307154, 1395036, 1473953]\n",
-      "LinregressResult(slope=105230.3, intercept=1073211.5999999999, rvalue=0.9917649027223193, pvalue=0.0008959829845497519, stderr=7845.576303242492)\n",
-      "[0.026614792795943348, 0.027077840031949702, 0.02711173326873565, 0.027277400864651306, 0.0270573227228693]\n",
-      "LinregressResult(slope=0.000108462068655351, intercept=0.026810893799519155, rvalue=0.6953612113665375, pvalue=0.19235170831815573, stderr=6.471880891532188e-05)\n",
-      "[154612, 143024, 130242, 128312, 143853]\n",
-      "LinregressResult(slope=-3623.0, intercept=147254.6, rvalue=-0.5288469182843798, pvalue=0.3595077561200439, stderr=3356.9181163680473)\n",
+      "[1320359, 1406680, 1488392]\n",
+      "LinregressResult(slope=84016.5, intercept=1321127.1666666667, rvalue=0.9998746306637126, pvalue=0.010080807496525356, stderr=1330.5036953469246)\n",
+      "[0.027113823295303794, 0.027209919430055626, 0.026928903664589072]\n",
+      "LinregressResult(slope=-9.245981535736107e-05, intercept=0.027176675278673523, rvalue=-0.6473492547820558, pvalue=0.5517550677621113, stderr=0.00010886282855284805)\n",
+      "[128735, 130997, 146477]\n",
+      "LinregressResult(slope=8871.0, intercept=126532.0, rvalue=0.9186249156838107, pvalue=0.2586013919587784, stderr=3815.707929074236)\n",
       "...----...\n"
      ]
     }
    ],
    "source": [
-    "a = range(5)\n",
+    "total_jumps = 3\n",
+    "a = range(total_jumps)\n",
     "\n",
-    "#print(process_means(30,14,70))\n",
+    "#print(process_means(30,14,total_jumps))\n",
     "\n",
-    "#means_list, fatality_rate, active_cases = process_means(30,14,70)\n",
+    "#means_list, fatality_rate, active_cases = process_means(30,14,total_jumps)\n",
     "from scipy.stats import linregress\n",
-    "for params in [process_means(30,14,70), process_means(14,14,70), process_means(10,14,70), process_means(7,14,70), process_means(5,14,70)]:\n",
+    "for params in [process_means(30,14,total_jumps), process_means(14,14,total_jumps), process_means(10,14,total_jumps), process_means(7,14,total_jumps), process_means(5,14,total_jumps)]:\n",
     "    means_list, fatality_rate, active_cases = params\n",
     "    for result in [means_list, fatality_rate, active_cases]:\n",
     "        print(result)\n",
@@ -130,6 +132,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Algunas reglas\n",
+    "\n",
     "Si fatality_rate > fatality_rate_mean:\n",
     "    Yellow Warning Casos pueden ser mayor de lo reflejado pues pueden que estén subtesteando.\n",
     "\n",
