Refactor and some new metrics for rules

--- a/covid-rules.ipynb
+++ b/covid-rules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "    populated_list = []\n",
     "    #all_days = requests.get('https://api.covid19api.com/dayone/country/argentina/status/confirmed/live')\n",
     "    #all_days = requests.get('https://api.covid19api.com/dayone/country/argentina/status/confirmed/live', verify=False)\n",
-    "    all_days = requests.get('https://api.covid19api.com/total/country/argentina')\n",
+    "    all_days = requests.get('https://api.covid19api.com/total/country/uk')\n",
     "    first=True\n",
     "    for day in all_days.json():\n",
     "        date_time_obj = datetime.datetime.strptime(day['Date'][:10], '%Y-%m-%d')\n",
@@ -22,8 +22,11 @@
     "        n = date_time_obj.toordinal() - ordinal_first\n",
     "        delta = 0\n",
     "        fatality_rate = 0\n",
+    "        if (day['Confirmed'] < 1000):\n",
+    "            continue\n",
     "        if n>number_days_window:\n",
-    "            delta = day['Confirmed'] - populated_list[n-number_days_window][1] \n",
+    "            # delta mean\n",
+    "            delta = (day['Confirmed'] - populated_list[n-number_days_window][2]) / number_days_window\n",
     "        first=False\n",
     "        if day['Confirmed'] > 0:\n",
     "            fatality_rate = day['Deaths']/day['Confirmed']\n",
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,52 +70,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1298079, 1389986, 1498215]\n",
-      "LinregressResult(slope=100068.0, intercept=1295358.6666666667, rvalue=0.998893315927466, pvalue=0.029953461026538918, stderr=4711.755546856499)\n",
-      "[0.027113823295303794, 0.027209919430055626, 0.026928903664589072]\n",
-      "LinregressResult(slope=-9.245981535736107e-05, intercept=0.027176675278673523, rvalue=-0.6473492547820558, pvalue=0.5517550677621113, stderr=0.00010886282855284805)\n",
-      "[128735, 130997, 146477]\n",
-      "LinregressResult(slope=8871.0, intercept=126532.0, rvalue=0.9186249156838107, pvalue=0.2586013919587784, stderr=3815.707929074236)\n",
+      "[19185, 19754, 32501]\n",
+      "LinregressResult(slope=6657.999999999999, intercept=17155.333333333332, rvalue=0.8843002320107634, pvalue=0.309271886084176, stderr=3515.4857890956328)\n",
+      "6147.498371062999 7529.117101847555 37791736.222222224 56687604.333333336\n",
+      "[0.03583510891926649, 0.03440244027976384, 0.030477753127503542]\n",
+      "LinregressResult(slope=-0.0026786778958814723, intercept=0.03625044533805943, rvalue=-0.9657783699899839, pvalue=0.16702898162989097, stderr=0.0007193837795830816)\n",
+      "0.002264630697223609 0.0027735948320205734 5.128552194807488e-06 7.692828292211232e-06\n",
+      "[1671982, 2000136, 2589463]\n",
+      "LinregressResult(slope=458740.5, intercept=1628453.1666666667, rvalue=0.9867620671199917, pvalue=0.10370160354291161, stderr=75394.15092753104)\n",
+      "379584.97014004947 464894.745436355 144084749556.22223 216127124334.3333\n",
       "...----...\n",
-      "[1311938, 1404275, 1499274]\n",
-      "LinregressResult(slope=93668.0, intercept=1311494.3333333333, rvalue=0.9999663488086744, pvalue=0.005222717805116478, stderr=768.4532082889356)\n",
-      "[0.027113823295303794, 0.027209919430055626, 0.026928903664589072]\n",
-      "LinregressResult(slope=-9.245981535736107e-05, intercept=0.027176675278673523, rvalue=-0.6473492547820558, pvalue=0.5517550677621113, stderr=0.00010886282855284805)\n",
-      "[128735, 130997, 146477]\n",
-      "LinregressResult(slope=8871.0, intercept=126532.0, rvalue=0.9186249156838107, pvalue=0.2586013919587784, stderr=3815.707929074236)\n",
+      "[15794, 23936, 43982]\n",
+      "LinregressResult(slope=14094.0, intercept=13810.0, rvalue=0.9715389368517406, pvalue=0.15224959205486618, stderr=3436.3888022166448)\n",
+      "11844.818951761146 14506.88126373136 140299736 210449604\n",
+      "[0.03583510891926649, 0.03440244027976384, 0.030477753127503542]\n",
+      "LinregressResult(slope=-0.0026786778958814723, intercept=0.03625044533805943, rvalue=-0.9657783699899839, pvalue=0.16702898162989097, stderr=0.0007193837795830816)\n",
+      "0.002264630697223609 0.0027735948320205734 5.128552194807488e-06 7.692828292211232e-06\n",
+      "[1671982, 2000136, 2589463]\n",
+      "LinregressResult(slope=458740.5, intercept=1628453.1666666667, rvalue=0.9867620671199917, pvalue=0.10370160354291161, stderr=75394.15092753104)\n",
+      "379584.97014004947 464894.745436355 144084749556.22223 216127124334.3333\n",
       "...----...\n",
-      "[1316297, 1406348, 1495084]\n",
-      "LinregressResult(slope=89393.5, intercept=1316516.1666666667, rvalue=0.999990983821368, pvalue=0.002703377537361862, stderr=379.60780198913636)\n",
-      "[0.027113823295303794, 0.027209919430055626, 0.026928903664589072]\n",
-      "LinregressResult(slope=-9.245981535736107e-05, intercept=0.027176675278673523, rvalue=-0.6473492547820558, pvalue=0.5517550677621113, stderr=0.00010886282855284805)\n",
-      "[128735, 130997, 146477]\n",
-      "LinregressResult(slope=8871.0, intercept=126532.0, rvalue=0.9186249156838107, pvalue=0.2586013919587784, stderr=3815.707929074236)\n",
+      "[15517, 26236, 47569]\n",
+      "LinregressResult(slope=16026.0, intercept=13748.0, rvalue=0.9822096117705166, pvalue=0.12026348910922663, stderr=3063.997878589344)\n",
+      "13322.18097760273 16316.272828069528 177480506 266220759\n",
+      "[0.03583510891926649, 0.03440244027976384, 0.030477753127503542]\n",
+      "LinregressResult(slope=-0.0026786778958814723, intercept=0.03625044533805943, rvalue=-0.9657783699899839, pvalue=0.16702898162989097, stderr=0.0007193837795830816)\n",
+      "0.002264630697223609 0.0027735948320205734 5.128552194807488e-06 7.692828292211232e-06\n",
+      "[1671982, 2000136, 2589463]\n",
+      "LinregressResult(slope=458740.5, intercept=1628453.1666666667, rvalue=0.9867620671199917, pvalue=0.10370160354291161, stderr=75394.15092753104)\n",
+      "379584.97014004947 464894.745436355 144084749556.22223 216127124334.3333\n",
       "...----...\n",
-      "[1318928, 1406955, 1491473]\n",
-      "LinregressResult(slope=86272.5, intercept=1319512.8333333333, rvalue=0.9999310767374432, pvalue=0.007474472162689514, stderr=1012.9610472933987)\n",
-      "[0.027113823295303794, 0.027209919430055626, 0.026928903664589072]\n",
-      "LinregressResult(slope=-9.245981535736107e-05, intercept=0.027176675278673523, rvalue=-0.6473492547820558, pvalue=0.5517550677621113, stderr=0.00010886282855284805)\n",
-      "[128735, 130997, 146477]\n",
-      "LinregressResult(slope=8871.0, intercept=126532.0, rvalue=0.9186249156838107, pvalue=0.2586013919587784, stderr=3815.707929074236)\n",
+      "[15608, 28234, 50215]\n",
+      "LinregressResult(slope=17303.5, intercept=14048.833333333332, rvalue=0.9880391566743691, pvalue=0.09856207802607508, stderr=2700.555884134472)\n",
+      "14299.280036266005 17512.969889008928 204469409.55555555 306704114.3333334\n",
+      "[0.03583510891926649, 0.03440244027976384, 0.030477753127503542]\n",
+      "LinregressResult(slope=-0.0026786778958814723, intercept=0.03625044533805943, rvalue=-0.9657783699899839, pvalue=0.16702898162989097, stderr=0.0007193837795830816)\n",
+      "0.002264630697223609 0.0027735948320205734 5.128552194807488e-06 7.692828292211232e-06\n",
+      "[1671982, 2000136, 2589463]\n",
+      "LinregressResult(slope=458740.5, intercept=1628453.1666666667, rvalue=0.9867620671199917, pvalue=0.10370160354291161, stderr=75394.15092753104)\n",
+      "379584.97014004947 464894.745436355 144084749556.22223 216127124334.3333\n",
       "...----...\n",
-      "[1320359, 1406680, 1488392]\n",
-      "LinregressResult(slope=84016.5, intercept=1321127.1666666667, rvalue=0.9998746306637126, pvalue=0.010080807496525356, stderr=1330.5036953469246)\n",
-      "[0.027113823295303794, 0.027209919430055626, 0.026928903664589072]\n",
-      "LinregressResult(slope=-9.245981535736107e-05, intercept=0.027176675278673523, rvalue=-0.6473492547820558, pvalue=0.5517550677621113, stderr=0.00010886282855284805)\n",
-      "[128735, 130997, 146477]\n",
-      "LinregressResult(slope=8871.0, intercept=126532.0, rvalue=0.9186249156838107, pvalue=0.2586013919587784, stderr=3815.707929074236)\n",
+      "[15800, 29544, 52024]\n",
+      "LinregressResult(slope=18112.0, intercept=14344.0, rvalue=0.9904451943029512, pvalue=0.08807496068842327, stderr=2521.8659758202916)\n",
+      "14931.04934914712 18286.72611486266 222936234.66666666 334404352\n",
+      "[0.03583510891926649, 0.03440244027976384, 0.030477753127503542]\n",
+      "LinregressResult(slope=-0.0026786778958814723, intercept=0.03625044533805943, rvalue=-0.9657783699899839, pvalue=0.16702898162989097, stderr=0.0007193837795830816)\n",
+      "0.002264630697223609 0.0027735948320205734 5.128552194807488e-06 7.692828292211232e-06\n",
+      "[1671982, 2000136, 2589463]\n",
+      "LinregressResult(slope=458740.5, intercept=1628453.1666666667, rvalue=0.9867620671199917, pvalue=0.10370160354291161, stderr=75394.15092753104)\n",
+      "379584.97014004947 464894.745436355 144084749556.22223 216127124334.3333\n",
       "...----...\n"
      ]
     }
    ],
    "source": [
+    "import statistics\n",
     "total_jumps = 3\n",
     "a = range(total_jumps)\n",
     "\n",
@@ -125,6 +144,7 @@
     "    for result in [means_list, fatality_rate, active_cases]:\n",
     "        print(result)\n",
     "        print(linregress(a, result))\n",
+    "        print(statistics.pstdev(result), statistics.stdev(result),statistics.pvariance(result),statistics.variance(result))\n",
     "    print (\"...----...\")"
    ]
   },
@@ -146,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Be cautious because light is blinking-yellow\n"
+      "Don't walk\n"
      ]
     }
    ],
